--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Main">
-        <activity android:name=".Health"></activity>
+        <activity android:name=".Match"></activity>
+        <activity android:name=".Health" />
         <activity android:name=".languages" />
         <activity android:name=".skills" />
         <activity android:name=".WelcomeActivity">
@@ -30,8 +31,7 @@
         <activity android:name=".Register" />
         <activity android:name=".login" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".ChooseGoal"/>
-
+        <activity android:name=".ChooseGoal" />
     </application>
 
 </manifest>
