--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/profile"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Main">
+        android:theme="@style/AppTheme"
+        android:name="androidx.multidex.MultiDexApplication" >
         <activity android:name=".LonelyUser" />
         <activity android:name=".AddNoteActivity" />
         <activity android:name=".GroupChatActivity" />
@@ -33,9 +34,20 @@
         <activity android:name=".login" />
         <activity android:name=".MainActivity" />
         <activity android:name=".ChooseGoal" />
+        <activity android:name=".RegisterNext"/>
         <activity android:name=".Health" />
         <activity android:name=".languages" />
         <activity android:name=".Match" />
+        <activity android:name=".AddPost"/>
+        <activity android:name=".UpdatePost"/>
+        <activity android:name=".OthersProfile"/>
+        <activity android:name=".CommentsActivity"/>
+        <activity android:name=".FriendsActivity"/>
+        <activity android:name=".MyPosts"/>
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
+
+
     </application>
 
 </manifest>
