--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,10 +66,13 @@ dependencies {
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
     implementation 'com.google.firebase:firebase-storage:19.2.2'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     dependencies {
         def multidex_version = "2.0.1"
         implementation "androidx.multidex:multidex:$multidex_version"
     }
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
+
 
 
 
