--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,39 +12,39 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/profile"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name="androidx.multidex.MultiDexApplication" >
-        <activity android:name=".LonelyUser" />
-        <activity android:name=".AddNoteActivity" />
-        <activity android:name=".GroupChatActivity" />
-        <activity android:name=".Skills" />
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".match.LonelyUser" />
+        <activity android:name=".note.AddNoteActivity" />
+        <activity android:name=".chat.GroupChatActivity" />
+        <activity android:name=".match.Skills" />
+        <activity android:name=".login.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LogSignUp" />
-        <activity android:name=".Register" />
-        <activity android:name=".login" />
+        <activity android:name=".login.LogSignUp" />
+        <activity android:name=".login.Register" />
+        <activity android:name=".login.login" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".ChooseGoal" />
-        <activity android:name=".RegisterNext"/>
-        <activity android:name=".Health" />
-        <activity android:name=".languages" />
-        <activity android:name=".Match" />
-        <activity android:name=".AddPost"/>
-        <activity android:name=".UpdatePost"/>
-        <activity android:name=".OthersProfile"/>
-        <activity android:name=".CommentsActivity"/>
-        <activity android:name=".MyPosts"/>
-        <activity android:name=".EditProfile"/>
-        <activity android:name=".ForgotPassword"/>
+        <activity android:name=".match.ChooseGoal" />
+        <activity android:name=".login.RegisterNext"/>
+        <activity android:name=".match.Health" />
+        <activity android:name=".match.languages" />
+        <activity android:name=".match.Match" />
+        <activity android:name=".post.AddPost"/>
+        <activity android:name=".post.UpdatePost"/>
+        <activity android:name=".profile.OthersProfile"/>
+        <activity android:name=".post.CommentsActivity"/>
+        <activity android:name=".post.MyPosts"/>
+        <activity android:name=".profile.EditProfile"/>
+        <activity android:name=".login.ForgotPassword"/>
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat"/>
 
